[gd_scene load_steps=5 format=3 uid="uid://hayg6xs3p43g"]

[ext_resource type="Script" path="res://menu.gd" id="1_pfga4"]
[ext_resource type="Texture2D" uid="uid://c6nm7ybxxoxgl" path="res://Assets/Fish/fishbg.png" id="2_56mf1"]
[ext_resource type="FontFile" uid="uid://dvvco1065bgll" path="res://Assets/Font/CorleoneDue-Wp8v.ttf" id="4_72hr5"]
[ext_resource type="FontFile" uid="uid://desrlk077pg0x" path="res://Assets/Font/TheGodfather-rgRK.ttf" id="5_jn6os"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pfga4")

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -28.0
offset_top = -260.0
offset_right = 2382.0
offset_bottom = 1900.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_56mf1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.684
anchor_top = 0.5
anchor_right = 0.684
anchor_bottom = 0.5
offset_left = -59.968
offset_top = -155.0
offset_right = 238.032
offset_bottom = 153.0
grow_horizontal = 0
grow_vertical = 2

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_jn6os")
theme_override_font_sizes/font_size = 40
text = "Start"

[node name="Controls" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_72hr5")
theme_override_font_sizes/font_size = 40
text = "Controls"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_72hr5")
theme_override_font_sizes/font_size = 40
text = " Options "

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_72hr5")
theme_override_font_sizes/font_size = 40
text = "Quit"

[node name="Credits" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_72hr5")
theme_override_font_sizes/font_size = 40
text = "Credits"

[node name="GameName" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 169.0
offset_top = -293.0
offset_right = 963.0
offset_bottom = 280.0
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0.14902, 0.301961, 1)
theme_override_fonts/font = ExtResource("4_72hr5")
theme_override_font_sizes/font_size = 150
text = "Fish    
Person		
Shooter"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_credits_pressed"]
